--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,12 @@
 LEP9.csv
-
+actual_pred_1.csv
+actual_pred_2.csv
+actual_pred_3.csv
+districts.cpg
+districts.dbf
+districts.prj
+districts.qmd
+districts.shp
+districts.shx
+forest.xlsx
+result2.csv
